# epstein_search

./: .gitignore  main.py  pyproject.toml  wait_and_index.sh
src/: __init__.py  config.py
src/db/: __init__.py  connection.py  models.py
src/detective/: __init__.py  connections.py  entities.py  timeline.py
src/extraction/: __init__.py  audio.py  file_types.py  hybrid.py  litigation.py  ocr.py  pdf_to_images.py  spreadsheet.py  video.py
src/indexing/: __init__.py  chunker.py  embeddings.py  vector_store.py
src/llm/: __init__.py  ollama_client.py  rag.py
src/search/: __init__.py  hybrid.py  keyword.py  semantic.py
src/web/: __init__.py  app.py  routes.py
src/web/templates/: base.html  chat.html  document.html  documents.html  duplicates.html  entities.html  error.html  images.html  index.html  indexing.html  timeline.html
src/web/templates/partials/: chat_response.html  connections.html  image_results.html  indexing_status.html  search_results.html
